fix!: fix generic Value Set and Concept Map tests